refactor(DevKit): 移除 HandyControl 相关代码- 删除了 App.xaml 中的 HandyControl 资源引用 - 移除了多个视图和对话框中 HandyControl 控件的使用 - 删除了 DevKit.csproj 中 HandyControl 的引用 -移除了 packages.config 中 HandyControl 的配置项

--- a/DevKit/Dialogs/ScreenShotListDialog.xaml
+++ b/DevKit/Dialogs/ScreenShotListDialog.xaml
@@ -27,7 +27,7 @@
         </Style>
     </UserControl.Resources>
 
-    <Border BorderBrush="{DynamicResource DarkDefaultBrush}" BorderThickness="0,1,0,0">
+    <Border BorderThickness="0,1,0,0">
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
@@ -73,16 +73,14 @@
                     Grid.Column="0"
                     HorizontalAlignment="Left"
                     Command="{Binding SortScreenshotsCommand}"
-                    Content="排序"
-                    Style="{StaticResource ButtonPrimary}" />
+                    Content="排序" />
 
                 <Button
                     Grid.Column="1"
                     HorizontalAlignment="Right"
                     Command="{Binding OutputScreenshotCommand}"
                     CommandParameter="{Binding ElementName=ScreenshotsListBox, Path=SelectedItem}"
-                    Content="导出到电脑"
-                    Style="{StaticResource ButtonSuccess}" />
+                    Content="导出到电脑" />
             </Grid>
         </Grid>
     </Border>
