--- a/DevKit/Views/UdpClientView.xaml
+++ b/DevKit/Views/UdpClientView.xaml
@@ -5,7 +5,6 @@
     xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
     xmlns:cvt="clr-namespace:DevKit.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:hc="https://handyorg.github.io/handycontrol"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ut="clr-namespace:DevKit.Utils"
     xmlns:vm="clr-namespace:DevKit.ViewModels"
@@ -46,20 +45,20 @@
                 VerticalAlignment="Center"
                 Text="服务端" />
 
-            <hc:TextBox
+            <!--  hc:InfoElement.Placeholder="远程UDP Server IP"  -->
+            <!--  hc:InfoElement.ShowClearButton="True"  -->
+            <TextBox
                 Grid.Column="1"
                 Margin="10,0"
-                hc:InfoElement.Placeholder="远程UDP Server IP"
-                hc:InfoElement.ShowClearButton="True"
                 FontSize="14"
                 Text="{Binding RemoteAddress}"
                 TextWrapping="NoWrap" />
 
-            <hc:TextBox
+            <!--  hc:InfoElement.Placeholder="端口"  -->
+            <!--  hc:InfoElement.ShowClearButton="True"  -->
+            <TextBox
                 Grid.Column="2"
                 MinWidth="90"
-                hc:InfoElement.Placeholder="端口"
-                hc:InfoElement.ShowClearButton="True"
                 FontSize="14"
                 MaxLength="5"
                 Text="{Binding RemotePort}"
@@ -102,7 +101,6 @@
                                 Margin="5,0,0,0"
                                 VerticalAlignment="Center"
                                 FontSize="12"
-                                Foreground="{DynamicResource SecondaryTextBrush}"
                                 Text="{Binding Time, StringFormat=[{0}]}" />
                         </StackPanel>
 
@@ -134,11 +132,11 @@
                                     <ContentPresenter HorizontalAlignment="Stretch" VerticalAlignment="Center" />
                                 </Border>
 
-                                <ControlTemplate.Triggers>
-                                    <Trigger Property="IsMouseOver" Value="True">
-                                        <Setter TargetName="ItemContainerBorder" Property="Background" Value="{DynamicResource BackgroundBrush}" />
-                                    </Trigger>
-                                </ControlTemplate.Triggers>
+                                <!-- <ControlTemplate.Triggers> -->
+                                <!--     <Trigger Property="IsMouseOver" Value="True"> -->
+                                <!--         <Setter TargetName="ItemContainerBorder" Property="Background" Value="{DynamicResource BackgroundBrush}" /> -->
+                                <!--     </Trigger> -->
+                                <!-- </ControlTemplate.Triggers> -->
                             </ControlTemplate>
                         </Setter.Value>
                     </Setter>
@@ -190,7 +188,6 @@
                                 Content="&#xe6dc;"
                                 FontFamily="/DevKit;component/Fonts/#iconfont"
                                 FontSize="16"
-                                Foreground="{DynamicResource DangerBrush}"
                                 Visibility="{Binding Annotation, Converter={StaticResource DeleteExCmdBtnVisibleConverterKey}}" />
                         </Grid>
                     </DataTemplate>
@@ -225,7 +222,7 @@
                 </b:Interaction.Triggers>
             </CheckBox>
 
-            <hc:TextBox
+            <TextBox
                 Grid.Column="3"
                 MinWidth="100"
                 Margin="10,0"
@@ -262,7 +259,7 @@
                 <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
 
-            <hc:TextBox
+            <TextBox
                 Grid.Column="0"
                 Padding="4"
                 VerticalContentAlignment="Top"
@@ -287,11 +284,9 @@
                     Grid.Row="1"
                     Margin="0,10,0,0"
                     HorizontalAlignment="Stretch"
-                    Background="{DynamicResource BackgroundBrush}"
                     BorderThickness="0"
                     Command="{Binding SendMessageCommand}"
-                    Content="发送"
-                    Foreground="{DynamicResource SuccessBrush}" />
+                    Content="发送" />
             </Grid>
         </Grid>
     </Grid>
