--- a/DevKit/Views/WebSocketServerView.xaml
+++ b/DevKit/Views/WebSocketServerView.xaml
@@ -5,7 +5,6 @@
     xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
     xmlns:cvt="clr-namespace:DevKit.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:hc="https://handyorg.github.io/handycontrol"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ut="clr-namespace:DevKit.Utils"
     xmlns:vm="clr-namespace:DevKit.ViewModels"
@@ -76,22 +75,19 @@
                     VerticalAlignment="Center"
                     Text="监听端口" />
 
-                <hc:TextBox
+                <!--  hc:InfoElement.Placeholder="端口"  -->
+                <!--  hc:InfoElement.ShowClearButton="True"  -->
+                <TextBox
                     Grid.Column="1"
                     MinWidth="90"
                     Margin="10,0"
-                    hc:InfoElement.Placeholder="端口"
-                    hc:InfoElement.ShowClearButton="True"
                     FontSize="14"
                     IsEnabled="{Binding ListenState, Converter={StaticResource ListenStateConverterKey}}"
                     MaxLength="5"
                     Text="{Binding ListenPort}"
                     TextWrapping="NoWrap" />
 
-                <Button
-                    Grid.Column="2"
-                    Command="{Binding ServerListenCommand}"
-                    Style="{StaticResource ButtonPrimary}">
+                <Button Grid.Column="2" Command="{Binding ServerListenCommand}">
                     <Grid>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition />
@@ -123,11 +119,11 @@
                     VerticalAlignment="Center"
                     Text="路径" />
 
-                <hc:TextBox
+                <!--  hc:InfoElement.Placeholder="非必填"  -->
+                <!--  hc:InfoElement.ShowClearButton="True"  -->
+                <TextBox
                     Grid.Column="1"
                     Margin="10,0,0,0"
-                    hc:InfoElement.Placeholder="非必填"
-                    hc:InfoElement.ShowClearButton="True"
                     FontSize="14"
                     IsEnabled="{Binding Content, ElementName=ListenStateButton, Converter={StaticResource ListenStateConverterKey}}"
                     Text="{Binding RequestPath}"
@@ -146,10 +142,10 @@
                     VerticalAlignment="Center"
                     Text="地址" />
 
-                <hc:TextBox
+                <!--  hc:InfoElement.Placeholder="开启监听后自动生成"  -->
+                <TextBox
                     Grid.Column="1"
                     Margin="10,0,0,0"
-                    hc:InfoElement.Placeholder="开启监听后自动生成"
                     FontSize="14"
                     IsReadOnly="True"
                     Text="{Binding WebSocketUrl}"
@@ -242,10 +238,9 @@
                 <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
 
-            <Border Grid.Row="0" Style="{StaticResource BorderTipSuccess}">
+            <Border Grid.Row="0">
                 <TextBlock
                     FontWeight="Bold"
-                    Foreground="{DynamicResource SuccessBrush}"
                     Text="{Binding ConnectedClientAddress}"
                     TextWrapping="NoWrap" />
             </Border>
@@ -279,7 +274,6 @@
                                     Margin="5,0,0,0"
                                     VerticalAlignment="Center"
                                     FontSize="12"
-                                    Foreground="{DynamicResource SecondaryTextBrush}"
                                     Text="{Binding Time, StringFormat=[{0}]}" />
                             </StackPanel>
 
@@ -311,11 +305,11 @@
                                         <ContentPresenter HorizontalAlignment="Stretch" VerticalAlignment="Center" />
                                     </Border>
 
-                                    <ControlTemplate.Triggers>
-                                        <Trigger Property="IsMouseOver" Value="True">
-                                            <Setter TargetName="ItemContainerBorder" Property="Background" Value="{DynamicResource BackgroundBrush}" />
-                                        </Trigger>
-                                    </ControlTemplate.Triggers>
+                                    <!-- <ControlTemplate.Triggers> -->
+                                    <!--     <Trigger Property="IsMouseOver" Value="True"> -->
+                                    <!--         <Setter TargetName="ItemContainerBorder" Property="Background" Value="{DynamicResource BackgroundBrush}" /> -->
+                                    <!--     </Trigger> -->
+                                    <!-- </ControlTemplate.Triggers> -->
                                 </ControlTemplate>
                             </Setter.Value>
                         </Setter>
@@ -353,7 +347,7 @@
                         </b:Interaction.Triggers>
                     </CheckBox>
 
-                    <hc:TextBox
+                    <TextBox
                         Grid.Column="1"
                         Margin="10,0"
                         FontSize="14"
@@ -384,15 +378,13 @@
                     <Button
                         Grid.Column="1"
                         HorizontalAlignment="Stretch"
-                        Background="{DynamicResource BackgroundBrush}"
                         BorderThickness="0"
                         Command="{Binding SendMessageCommand}"
-                        Content="发送"
-                        Foreground="{DynamicResource SuccessBrush}" />
+                        Content="发送" />
                 </Grid>
             </Grid>
 
-            <hc:TextBox
+            <TextBox
                 Grid.Row="3"
                 Padding="4"
                 FontSize="14"
