--- a/DevKit/Dialogs/CreateKeyDialog.xaml
+++ b/DevKit/Dialogs/CreateKeyDialog.xaml
@@ -3,7 +3,6 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:hc="https://handyorg.github.io/handycontrol"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:prism="http://prismlibrary.com/"
     xmlns:ut="clr-namespace:DevKit.Utils"
@@ -29,7 +28,7 @@
         </Style>
     </UserControl.Resources>
 
-    <Border BorderBrush="{DynamicResource DarkDefaultBrush}" BorderThickness="0,1,0,0">
+    <Border BorderThickness="0,1,0,0">
         <Grid Margin="10">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
@@ -49,12 +48,12 @@
                     VerticalAlignment="Center"
                     Text="Key别名" />
 
-                <hc:TextBox
+                <!--  hc:InfoElement.Placeholder="请输入密码证书别名"  -->
+                <!--  hc:InfoElement.ShowClearButton="True"  -->
+                <TextBox
                     Margin="10"
                     VerticalAlignment="Center"
                     VerticalContentAlignment="Center"
-                    hc:InfoElement.Placeholder="请输入密码证书别名"
-                    hc:InfoElement.ShowClearButton="True"
                     FontSize="14"
                     Text="{Binding KeyAlias}" />
             </DockPanel>
@@ -66,15 +65,14 @@
                     VerticalAlignment="Center"
                     Text="密码" />
 
+                <!--  hc:InfoElement.Placeholder="请输入密码"  -->
                 <PasswordBox
                     Margin="0,0,10,0"
                     VerticalAlignment="Center"
                     VerticalContentAlignment="Center"
-                    hc:InfoElement.Placeholder="请输入密码"
                     ut:PasswordAttachAttribute.Attach="True"
                     ut:PasswordAttachAttribute.Password="{Binding KeyPassword, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                    FontSize="14"
-                    Style="{DynamicResource PasswordBoxExtend}" />
+                    FontSize="14" />
             </DockPanel>
 
             <DockPanel Grid.Row="2" LastChildFill="True">
@@ -84,12 +82,12 @@
                     VerticalAlignment="Center"
                     Text="创建证书者姓氏" />
 
-                <hc:TextBox
+                <!--  hc:InfoElement.Placeholder="姓氏拼音，如：Zhao"  -->
+                <!--  hc:InfoElement.ShowClearButton="True"  -->
+                <TextBox
                     Margin="10"
                     VerticalAlignment="Center"
                     VerticalContentAlignment="Center"
-                    hc:InfoElement.Placeholder="姓氏拼音，如：Zhao"
-                    hc:InfoElement.ShowClearButton="True"
                     FontSize="14"
                     Text="{Binding KeySurname}" />
             </DockPanel>
@@ -101,12 +99,12 @@
                     VerticalAlignment="Center"
                     Text="公司名" />
 
-                <hc:TextBox
+                <!--  hc:InfoElement.Placeholder="请输入证书所属公司名"  -->
+                <!--  hc:InfoElement.ShowClearButton="True"  -->
+                <TextBox
                     Margin="0,0,10,0"
                     VerticalAlignment="Center"
                     VerticalContentAlignment="Center"
-                    hc:InfoElement.Placeholder="请输入证书所属公司名"
-                    hc:InfoElement.ShowClearButton="True"
                     FontSize="14"
                     Text="{Binding KeyCompany}" />
             </DockPanel>
@@ -118,12 +116,12 @@
                     VerticalAlignment="Center"
                     Text="行政区" />
 
-                <hc:TextBox
+                <!--  hc:InfoElement.Placeholder="请输入所属公司行政区域，如：海淀区"  -->
+                <!--  hc:InfoElement.ShowClearButton="True"  -->
+                <TextBox
                     Margin="10"
                     VerticalAlignment="Center"
                     VerticalContentAlignment="Center"
-                    hc:InfoElement.Placeholder="请输入所属公司行政区域，如：海淀区"
-                    hc:InfoElement.ShowClearButton="True"
                     FontSize="14"
                     Text="{Binding KeyDistrict}" />
             </DockPanel>
@@ -135,12 +133,12 @@
                     VerticalAlignment="Center"
                     Text="省（市）" />
 
-                <hc:TextBox
+                <!--  hc:InfoElement.Placeholder="请输入所属公司省份，如：北京市"  -->
+                <!--  hc:InfoElement.ShowClearButton="True"  -->
+                <TextBox
                     Margin="0,0,10,0"
                     VerticalAlignment="Center"
                     VerticalContentAlignment="Center"
-                    hc:InfoElement.Placeholder="请输入所属公司省份，如：北京市"
-                    hc:InfoElement.ShowClearButton="True"
                     FontSize="14"
                     Text="{Binding KeyProvince}" />
             </DockPanel>
@@ -176,8 +174,7 @@
                     Margin="5,0,0,0"
                     HorizontalAlignment="Stretch"
                     Command="{Binding GenerateKeyCommand}"
-                    Content="生成证书"
-                    Style="{StaticResource ButtonPrimary}" />
+                    Content="生成证书" />
             </UniformGrid>
         </Grid>
     </Border>
