--- a/DevKit/Dialogs/ExCommandDialog.xaml
+++ b/DevKit/Dialogs/ExCommandDialog.xaml
@@ -3,7 +3,6 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:hc="https://handyorg.github.io/handycontrol"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:prism="http://prismlibrary.com/"
     xmlns:vm="clr-namespace:DevKit.ViewModels"
@@ -27,7 +26,7 @@
         </Style>
     </UserControl.Resources>
 
-    <Border BorderBrush="{DynamicResource DarkDefaultBrush}" BorderThickness="0,1,0,0">
+    <Border BorderThickness="0,1,0,0">
         <Grid Margin="20">
             <Grid.RowDefinitions>
                 <RowDefinition Height="100" />
@@ -47,12 +46,12 @@
                     VerticalAlignment="Center"
                     Text="指令值" />
 
-                <hc:TextBox
+                <!--  hc:InfoElement.Placeholder="请输入16进制格式指令"  -->
+                <TextBox
                     Grid.Column="1"
                     Margin="10,0,0,0"
                     Padding="7,5"
                     VerticalContentAlignment="Top"
-                    hc:InfoElement.Placeholder="请输入16进制格式指令"
                     FontSize="14"
                     Text="{Binding UserCommandValue}"
                     TextWrapping="NoWrap" />
@@ -70,11 +69,11 @@
                     VerticalAlignment="Center"
                     Text="备注" />
 
-                <hc:TextBox
+                <!--  hc:InfoElement.Placeholder="可选"  -->
+                <TextBox
                     Grid.Column="1"
                     Margin="10,0,0,0"
                     Padding="7,5"
-                    hc:InfoElement.Placeholder="可选"
                     FontSize="14"
                     Text="{Binding CommandAnnotation}"
                     TextWrapping="NoWrap" />
@@ -91,15 +90,13 @@
                     Margin="0,0,10,0"
                     HorizontalAlignment="Stretch"
                     Command="{Binding CommandSaveCommand}"
-                    Content="保存"
-                    Style="{StaticResource ButtonPrimary}" />
+                    Content="保存" />
 
                 <Button
                     Margin="10,0,0,0"
                     HorizontalAlignment="Stretch"
                     Command="{Binding CancelDialogCommand}"
-                    Content="取消"
-                    Style="{StaticResource ButtonWarning}" />
+                    Content="取消" />
             </UniformGrid>
         </Grid>
     </Border>
