--- a/DevKit/Views/ApplicationPackageView.xaml
+++ b/DevKit/Views/ApplicationPackageView.xaml
@@ -3,7 +3,6 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:hc="https://handyorg.github.io/handycontrol"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ut="clr-namespace:DevKit.Utils"
     xmlns:vm="clr-namespace:DevKit.ViewModels"
@@ -41,19 +40,18 @@
                 VerticalAlignment="Center"
                 Text="JDK目录" />
 
-            <hc:TextBox
+            <!--  hc:InfoElement.ShowClearButton="True"  -->
+            <TextBox
                 Grid.Column="1"
                 Margin="10,0"
                 VerticalContentAlignment="Center"
-                hc:InfoElement.ShowClearButton="True"
                 FontSize="14"
                 Text="{Binding JdkPath}" />
 
             <Button
                 Grid.Column="2"
                 Command="{Binding SelectJdkCommand}"
-                Content="设置"
-                Style="{StaticResource ButtonPrimary}" />
+                Content="设置" />
         </Grid>
 
         <Grid Grid.Row="1" Margin="10,0">
@@ -69,13 +67,13 @@
                 VerticalAlignment="Center"
                 Text="证书" />
 
-            <hc:TextBox
+            <!--  hc:InfoElement.Placeholder="请配置签名秘钥文件（*.jks）"  -->
+            <!--  hc:InfoElement.ShowClearButton="True"  -->
+            <TextBox
                 Grid.Column="1"
                 Margin="10,0"
                 VerticalAlignment="Center"
                 VerticalContentAlignment="Center"
-                hc:InfoElement.Placeholder="请配置签名秘钥文件（*.jks）"
-                hc:InfoElement.ShowClearButton="True"
                 FontSize="14"
                 Text="{Binding KeyFilePath}"
                 ToolTip="{Binding KeyFilePath}" />
@@ -84,15 +82,13 @@
                 Grid.Column="2"
                 Command="{Binding CreateKeyCommand}"
                 Content="&#xe6aa;"
-                FontFamily="/DevKit;component/Fonts/#iconfont"
-                Foreground="{DynamicResource PrimaryBrush}" />
+                FontFamily="/DevKit;component/Fonts/#iconfont" />
 
             <Button
                 Grid.Column="3"
                 Margin="10,0,0,0"
                 Command="{Binding SelectKeyCommand}"
-                Content="选择"
-                Style="{StaticResource ButtonPrimary}" />
+                Content="选择" />
         </Grid>
 
         <Grid Grid.Row="2" Margin="10">
@@ -109,12 +105,12 @@
                 VerticalAlignment="Center"
                 Text="别名" />
 
-            <hc:TextBox
+            <!--  hc:InfoElement.Placeholder="请输入证书别名"  -->
+            <!--  hc:InfoElement.ShowClearButton="True"  -->
+            <TextBox
                 Grid.Column="1"
                 Margin="10,0"
                 VerticalContentAlignment="Center"
-                hc:InfoElement.Placeholder="请输入证书别名"
-                hc:InfoElement.ShowClearButton="True"
                 FontSize="14"
                 Text="{Binding KeyAlias}" />
 
@@ -123,25 +119,23 @@
                 VerticalAlignment="Center"
                 Text="密码" />
 
+            <!--  hc:InfoElement.Placeholder="请输入密码"  -->
             <PasswordBox
                 Grid.Column="3"
                 Margin="10,0,0,0"
                 VerticalContentAlignment="Center"
-                hc:InfoElement.Placeholder="请输入密码"
                 ut:PasswordAttachAttribute.Attach="True"
                 ut:PasswordAttachAttribute.Password="{Binding KeyPassword, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                FontSize="14"
-                Style="{DynamicResource PasswordBoxExtend}" />
+                FontSize="14" />
 
             <Button
                 Grid.Column="4"
                 Margin="10,0,0,0"
                 Command="{Binding ShowSha1Command}"
-                Content="查看SHA1"
-                Style="{StaticResource ButtonPrimary}" />
+                Content="查看SHA1" />
         </Grid>
 
-        <hc:TextBox
+        <TextBox
             Grid.Row="3"
             Margin="10,0"
             Padding="5,3"
@@ -169,21 +163,20 @@
                 VerticalAlignment="Center"
                 Text="根目录" />
 
-            <hc:TextBox
+            <!--  hc:InfoElement.Placeholder="请输入（选择）含有APK安装包的根目录"  -->
+            <!--  hc:InfoElement.ShowClearButton="True"  -->
+            <TextBox
                 Grid.Column="1"
                 Margin="10,0"
                 VerticalAlignment="Center"
                 VerticalContentAlignment="Center"
-                hc:InfoElement.Placeholder="请输入（选择）含有APK安装包的根目录"
-                hc:InfoElement.ShowClearButton="True"
                 FontSize="14"
                 Text="{Binding ApkRootFolderPath}" />
 
             <Button
                 Grid.Column="2"
                 Command="{Binding SelectApkRootFolderCommand}"
-                Content="选择"
-                Style="{StaticResource ButtonPrimary}" />
+                Content="选择" />
 
             <Button
                 Grid.Column="3"
@@ -191,8 +184,7 @@
                 Command="{Binding RefreshApkFilesCommand}"
                 Content="&#xe602;"
                 FontFamily="/DevKit;component/Fonts/#iconfont"
-                FontSize="16"
-                Style="{StaticResource ButtonPrimary}" />
+                FontSize="16" />
         </Grid>
 
         <ListBox
@@ -204,7 +196,6 @@
             ItemsSource="{Binding ApkFileCollection}"
             ScrollViewer.CanContentScroll="False"
             ScrollViewer.VerticalScrollBarVisibility="Hidden">
-
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <Grid>
@@ -239,18 +230,17 @@
                                 <Border
                                     x:Name="ItemContainerBorder"
                                     Padding="10"
-                                    BorderBrush="{StaticResource BorderBrush}"
                                     BorderThickness="0"
                                     CornerRadius="5">
                                     <ContentPresenter HorizontalAlignment="Stretch" VerticalAlignment="Center" />
                                 </Border>
 
-                                <ControlTemplate.Triggers>
-                                    <Trigger Property="IsSelected" Value="True">
-                                        <Setter TargetName="ItemContainerBorder" Property="Background" Value="{DynamicResource DarkDefaultBrush}" />
-                                        <Setter TargetName="ItemContainerBorder" Property="TextBlock.Foreground" Value="{DynamicResource PrimaryBrush}" />
-                                    </Trigger>
-                                </ControlTemplate.Triggers>
+                                <!-- <ControlTemplate.Triggers> -->
+                                <!--     <Trigger Property="IsSelected" Value="True"> -->
+                                <!--         <Setter TargetName="ItemContainerBorder" Property="Background" Value="{DynamicResource DarkDefaultBrush}" /> -->
+                                <!--         <Setter TargetName="ItemContainerBorder" Property="TextBlock.Foreground" Value="{DynamicResource PrimaryBrush}" /> -->
+                                <!--     </Trigger> -->
+                                <!-- </ControlTemplate.Triggers> -->
                             </ControlTemplate>
                         </Setter.Value>
                     </Setter>
