--- a/DevKit/Views/ColorResourceView.xaml
+++ b/DevKit/Views/ColorResourceView.xaml
@@ -5,7 +5,6 @@
     xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
     xmlns:cvt="clr-namespace:DevKit.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:hc="https://handyorg.github.io/handycontrol"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:vm="clr-namespace:DevKit.ViewModels"
     d:DataContext="{d:DesignInstance Type=vm:ColorResourceViewModel}"
@@ -50,26 +49,25 @@
                         <ColumnDefinition />
                     </Grid.ColumnDefinitions>
 
-                    <Border Grid.Column="0" Style="{StaticResource BorderTipDanger}">
+                    <Border Grid.Column="0">
                         <TextBlock Text="红（R）" />
                     </Border>
 
-                    <hc:NumericUpDown
-                        x:Name="ColorRedValueNumericUpDown"
-                        Grid.Column="1"
-                        Margin="7,0,0,0"
-                        hc:InfoElement.ShowClearButton="True"
-                        FontSize="14"
-                        Maximum="255"
-                        Minimum="0"
-                        Style="{StaticResource NumericUpDownPlus}"
-                        Value="{Binding Red}">
-                        <b:Interaction.Triggers>
-                            <b:EventTrigger EventName="ValueChanged">
-                                <b:InvokeCommandAction Command="{Binding ColorRedValueChangedCommand}" CommandParameter="{Binding ElementName=ColorRedValueNumericUpDown}" />
-                            </b:EventTrigger>
-                        </b:Interaction.Triggers>
-                    </hc:NumericUpDown>
+                    <!--  hc:InfoElement.ShowClearButton="True"  -->
+                    <!--  <NumericUpDown  -->
+                    <!--  x:Name="ColorRedValueNumericUpDown"  -->
+                    <!--  Grid.Column="1"  -->
+                    <!--  Margin="7,0,0,0"  -->
+                    <!--  FontSize="14"  -->
+                    <!--  Maximum="255"  -->
+                    <!--  Minimum="0"  -->
+                    <!--  Value="{Binding Red}">  -->
+                    <!--     <b:Interaction.Triggers> -->
+                    <!--         <b:EventTrigger EventName="ValueChanged"> -->
+                    <!--             <b:InvokeCommandAction Command="{Binding ColorRedValueChangedCommand}" CommandParameter="{Binding ElementName=ColorRedValueNumericUpDown}" /> -->
+                    <!--         </b:EventTrigger> -->
+                    <!--     </b:Interaction.Triggers> -->
+                    <!-- </NumericUpDown> -->
                 </Grid>
 
                 <Grid Grid.Row="1" Margin="0,7">
@@ -78,26 +76,25 @@
                         <ColumnDefinition />
                     </Grid.ColumnDefinitions>
 
-                    <Border Grid.Column="0" Style="{StaticResource BorderTipSuccess}">
+                    <Border Grid.Column="0">
                         <TextBlock Text="绿（G）" />
                     </Border>
 
-                    <hc:NumericUpDown
-                        x:Name="ColorGreenValueNumericUpDown"
-                        Grid.Column="1"
-                        Margin="7,0,0,0"
-                        hc:InfoElement.ShowClearButton="True"
-                        FontSize="14"
-                        Maximum="255"
-                        Minimum="0"
-                        Style="{StaticResource NumericUpDownPlus}"
-                        Value="{Binding Green}">
-                        <b:Interaction.Triggers>
-                            <b:EventTrigger EventName="ValueChanged">
-                                <b:InvokeCommandAction Command="{Binding ColorGreenValueChangedCommand}" CommandParameter="{Binding ElementName=ColorGreenValueNumericUpDown}" />
-                            </b:EventTrigger>
-                        </b:Interaction.Triggers>
-                    </hc:NumericUpDown>
+                    <!--  hc:InfoElement.ShowClearButton="True"  -->
+                    <!--  <NumericUpDown  -->
+                    <!--  x:Name="ColorGreenValueNumericUpDown"  -->
+                    <!--  Grid.Column="1"  -->
+                    <!--  Margin="7,0,0,0"  -->
+                    <!--  FontSize="14"  -->
+                    <!--  Maximum="255"  -->
+                    <!--  Minimum="0"  -->
+                    <!--  Value="{Binding Green}">  -->
+                    <!--     <b:Interaction.Triggers> -->
+                    <!--         <b:EventTrigger EventName="ValueChanged"> -->
+                    <!--             <b:InvokeCommandAction Command="{Binding ColorGreenValueChangedCommand}" CommandParameter="{Binding ElementName=ColorGreenValueNumericUpDown}" /> -->
+                    <!--         </b:EventTrigger> -->
+                    <!--     </b:Interaction.Triggers> -->
+                    <!-- </NumericUpDown> -->
                 </Grid>
 
                 <Grid Grid.Row="2">
@@ -106,26 +103,25 @@
                         <ColumnDefinition />
                     </Grid.ColumnDefinitions>
 
-                    <Border Grid.Column="0" Style="{StaticResource BorderTipPrimary}">
+                    <Border Grid.Column="0">
                         <TextBlock Text="蓝（B）" />
                     </Border>
 
-                    <hc:NumericUpDown
-                        x:Name="ColorBlueValueNumericUpDown"
-                        Grid.Column="1"
-                        Margin="7,0,0,0"
-                        hc:InfoElement.ShowClearButton="True"
-                        FontSize="14"
-                        Maximum="255"
-                        Minimum="0"
-                        Style="{StaticResource NumericUpDownPlus}"
-                        Value="{Binding Blue}">
-                        <b:Interaction.Triggers>
-                            <b:EventTrigger EventName="ValueChanged">
-                                <b:InvokeCommandAction Command="{Binding ColorBlueValueChangedCommand}" CommandParameter="{Binding ElementName=ColorBlueValueNumericUpDown}" />
-                            </b:EventTrigger>
-                        </b:Interaction.Triggers>
-                    </hc:NumericUpDown>
+                    <!--  hc:InfoElement.ShowClearButton="True"  -->
+                    <!--  <NumericUpDown  -->
+                    <!--  x:Name="ColorBlueValueNumericUpDown"  -->
+                    <!--  Grid.Column="1"  -->
+                    <!--  Margin="7,0,0,0"  -->
+                    <!--  FontSize="14"  -->
+                    <!--  Maximum="255"  -->
+                    <!--  Minimum="0"  -->
+                    <!--  Value="{Binding Blue}">  -->
+                    <!--     <b:Interaction.Triggers> -->
+                    <!--         <b:EventTrigger EventName="ValueChanged"> -->
+                    <!--             <b:InvokeCommandAction Command="{Binding ColorBlueValueChangedCommand}" CommandParameter="{Binding ElementName=ColorBlueValueNumericUpDown}" /> -->
+                    <!--         </b:EventTrigger> -->
+                    <!--     </b:Interaction.Triggers> -->
+                    <!-- </NumericUpDown> -->
                 </Grid>
             </Grid>
 
@@ -136,7 +132,7 @@
                     <RowDefinition />
                 </Grid.RowDefinitions>
 
-                <Border Grid.Row="0" Style="{StaticResource BorderTipWarning}">
+                <Border Grid.Row="0">
                     <Grid>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition />
@@ -149,11 +145,11 @@
                     </Grid>
                 </Border>
 
+                <!--  hc:TipElement.Visibility="Collapsed"  -->
                 <Slider
                     x:Name="AlphaSlider"
                     Grid.Row="1"
                     Margin="0,10"
-                    hc:TipElement.Visibility="Collapsed"
                     IsSnapToTickEnabled="True"
                     Maximum="255"
                     Minimum="0"
@@ -183,7 +179,7 @@
                             <RowDefinition />
                         </Grid.RowDefinitions>
 
-                        <hc:TextBox
+                        <TextBox
                             x:Name="ColorHexValueTextBox"
                             Grid.Row="0"
                             HorizontalContentAlignment="Center"
@@ -212,11 +208,11 @@
                 <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
 
-            <hc:TextBox
+            <!--  hc:InfoElement.Placeholder="请输入待转换的颜色值，格式为RGB，如：#000000"  -->
+            <!--  hc:InfoElement.ShowClearButton="True"  -->
+            <TextBox
                 x:Name="InputColorHexValueTextBox"
                 Grid.Column="0"
-                hc:InfoElement.Placeholder="请输入待转换的颜色值，格式为RGB，如：#000000"
-                hc:InfoElement.ShowClearButton="True"
                 FontSize="14"
                 MaxLength="7" />
 
@@ -225,8 +221,7 @@
                 Margin="10,0,0,0"
                 Command="{Binding ColorHexToRgbCommand}"
                 CommandParameter="{Binding Text, ElementName=InputColorHexValueTextBox}"
-                Content="转为RGB"
-                Style="{StaticResource ButtonPrimary}" />
+                Content="转为RGB" />
         </Grid>
 
         <Grid Grid.Row="2" Margin="10,10,10,0">
@@ -255,16 +250,16 @@
                 VerticalAlignment="Center"
                 Text="{Binding ColorCount, StringFormat=共有颜色：{0} 种}" />
 
-            <hc:Pagination
-                Grid.Column="2"
-                HorizontalAlignment="Right"
-                MaxPageCount="{Binding MaxPage}">
-                <hc:Interaction.Triggers>
-                    <hc:EventTrigger EventName="PageUpdated">
-                        <hc:EventToCommand Command="{Binding PageUpdatedCommand}" PassEventArgsToCommand="True" />
-                    </hc:EventTrigger>
-                </hc:Interaction.Triggers>
-            </hc:Pagination>
+            <!--  <Pagination  -->
+            <!--  Grid.Column="2"  -->
+            <!--  HorizontalAlignment="Right"  -->
+            <!--  MaxPageCount="{Binding MaxPage}">  -->
+            <!--     <Interaction.Triggers> -->
+            <!--         <EventTrigger EventName="PageUpdated"> -->
+            <!--             <EventToCommand Command="{Binding PageUpdatedCommand}" PassEventArgsToCommand="True" /> -->
+            <!--         </hc:EventTrigger> -->
+            <!--     </hc:Interaction.Triggers> -->
+            <!-- </hc:Pagination> -->
         </Grid>
 
         <ListBox
