--- a/DevKit/Views/MainWindow.xaml
+++ b/DevKit/Views/MainWindow.xaml
@@ -2,76 +2,63 @@
     x:Class="DevKit.Views.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:hc="https://handyorg.github.io/handycontrol"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:prism="http://prismlibrary.com/"
     xmlns:vm="clr-namespace:DevKit.ViewModels"
     x:Name="TargetWindow"
-    Title="DevKit"
-    Width="900"
-    Height="610"
-    MinWidth="900"
-    MinHeight="610"
+    Title="DevKit（开发者工具集）"
+    Width="412"
+    Height="654"
     d:DataContext="{d:DesignInstance Type=vm:MainWindowViewModel}"
+    Background="#f3f9fe"
     ResizeMode="CanMinimize"
-    WindowStartupLocation="CenterScreen"
+    WindowStartupLocation="Manual"
     mc:Ignorable="d">
 
-    <Border BorderThickness="0,1,0,0">
-        <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="200" />
-                <ColumnDefinition />
-            </Grid.ColumnDefinitions>
+    <Grid Margin="20">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition />
+        </Grid.RowDefinitions>
+        <Border
+            Grid.Row="0"
+            Background="White"
+            BorderBrush="#EEEFF0"
+            BorderThickness="1"
+            CornerRadius="4">
+            <Grid Margin="12">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition />
+                    <ColumnDefinition Width="Auto" />
+                </Grid.ColumnDefinitions>
 
-            <ListBox
-                x:Name="MenuListBox"
-                Grid.Column="0"
-                HorizontalAlignment="Stretch"
-                BorderThickness="0"
-                ItemsSource="{Binding MenuModels}"
-                ScrollViewer.CanContentScroll="False"
-                ScrollViewer.VerticalScrollBarVisibility="Hidden"
-                SelectedIndex="0">
+                <TextBlock Grid.Column="0" />
 
-                <b:Interaction.Triggers>
-                    <b:EventTrigger EventName="SelectionChanged">
-                        <b:InvokeCommandAction Command="{Binding ItemSelectedCommand}" CommandParameter="{Binding ElementName=MenuListBox}" />
-                    </b:EventTrigger>
-                </b:Interaction.Triggers>
+                <TextBlock
+                    Grid.Column="1"
+                    VerticalAlignment="Center"
+                    Foreground="#1B1B1B"
+                    Text="置顶显示" />
 
-                <ListBox.ItemTemplate>
-                    <DataTemplate>
-                        <Grid>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="Auto" />
-                                <ColumnDefinition Width="*" />
-                            </Grid.ColumnDefinitions>
+                <ToggleButton
+                    Grid.Column="2"
+                    hc:ToggleButtonAttach.ShowLabel="True"
+                    Checked="TopmostToggleButton_Checked"
+                    Style="{StaticResource ToggleButtonSwitch}"
+                    Unchecked="TopmostToggleButton_Unchecked" />
+            </Grid>
+        </Border>
 
-                            <TextBlock
-                                Grid.Column="0"
-                                Padding="3,15"
-                                VerticalAlignment="Center"
-                                FontFamily="/DevKit;component/Fonts/#iconfont"
-                                FontSize="25"
-                                Text="{Binding MenuIcon}" />
+        <TextBlock
+            Grid.Row="1"
+            Margin="0,20"
+            FontSize="15"
+            Foreground="#1B1B1B"
+            Text="Android工具" />
 
-                            <TextBlock
-                                Grid.Column="1"
-                                Margin="10,0,0,0"
-                                VerticalAlignment="Center"
-                                FontSize="16"
-                                Text="{Binding MenuName}" />
-                        </Grid>
-                    </DataTemplate>
-                </ListBox.ItemTemplate>
-            </ListBox>
-
-            <ContentControl
-                Grid.Column="1"
-                Margin="1,0,0,0"
-                prism:RegionManager.RegionName="ContentRegion" />
-        </Grid>
-    </Border>
+        <ListBox Grid.Row="2" />
+    </Grid>
 </Window>
