refactor(DevKit): 优化 MainWindow.xaml 样式并调整 MainWindowViewModel
- 移除 MainWindow.xaml 中的多余 x:Name 属性
- 将背景颜色从 #f3f9fe 改为 #F3F9FE（大写）
- 在菜单图标中添加 TextAlignment="Center" 属性以居中文本
- 在 MainWindowViewModel 中添加 OtherToolsMouseDoubleClickCommand属性

--- a/DevKit/Views/MainWindow.xaml
+++ b/DevKit/Views/MainWindow.xaml
@@ -8,12 +8,11 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:utils="clr-namespace:DevKit.Utils"
     xmlns:vm="clr-namespace:DevKit.ViewModels"
-    x:Name="TargetWindow"
     Title="DevKit（开发者工具集）"
     Width="412"
     Height="654"
     d:DataContext="{d:DesignInstance Type=vm:MainWindowViewModel}"
-    Background="#f3f9fe"
+    Background="#F3F9FE"
     ResizeMode="CanMinimize"
     WindowStartupLocation="Manual"
     mc:Ignorable="d">
@@ -90,7 +89,8 @@
                             FontFamily="/DevKit;component/Fonts/#iconfont"
                             FontSize="30"
                             Foreground="#1B1B1B"
-                            Text="{Binding MenuIcon}" />
+                            Text="{Binding MenuIcon}"
+                            TextAlignment="Center" />
 
                         <TextBlock
                             Grid.Row="1"
@@ -177,7 +177,8 @@
                             FontFamily="/DevKit;component/Fonts/#iconfont"
                             FontSize="30"
                             Foreground="#1B1B1B"
-                            Text="{Binding MenuIcon}" />
+                            Text="{Binding MenuIcon}"
+                            TextAlignment="Center" />
 
                         <TextBlock
                             Grid.Row="1"
@@ -264,7 +265,8 @@
                             FontFamily="/DevKit;component/Fonts/#iconfont"
                             FontSize="30"
                             Foreground="#1B1B1B"
-                            Text="{Binding MenuIcon}" />
+                            Text="{Binding MenuIcon}"
+                            TextAlignment="Center" />
 
                         <TextBlock
                             Grid.Row="1"
